--- a/src/components/Recipe/recipe.scss
+++ b/src/components/Recipe/recipe.scss
@@ -25,6 +25,11 @@
       opacity: 0.6;
     }
   }
+  &__icon-smile {
+    height: 2.25rem;
+    width: 2.25rem;
+    fill: $color-primary;
+  }
 
   &__img {
     width: 100%;
@@ -42,7 +47,7 @@
     font-weight: 700;
     font-size: 3.25rem;
     text-transform: uppercase;
-    width: 50%;
+    width: 80%;
     line-height: 1.95;
     text-align: center;
 
@@ -113,8 +118,8 @@
     margin-right: 1.75rem;
 
     svg {
-      height: 2.25rem;
-      width: 2.25rem;
+      height: 2.5rem;
+      width: 2.5rem;
       fill: $color-primary;
     }
   }
