add function search

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,5 +2,6 @@
 @import "./scss/components.scss";
 @import "./components/Header/header.scss";
 @import "./components/SearchResults/searchResults.scss";
+@import "./components/SearchResults/results/results.scss";
 @import "./components/Recipe/recipe.scss";
 @import "./components//Upload/upload.scss";
