add recipe with id ... bug

--- a/src/components/SearchResults/results/results.scss
+++ b/src/components/SearchResults/results/results.scss
@@ -1,4 +1,12 @@
 .preview {
+  a {
+    display: flex;
+    align-items: center;
+    padding: 1.5rem 3.25rem;
+    transition: all 0.3s;
+    border-right: 1px solid #fff;
+    text-decoration: none;
+  }
   &__link {
     &:link,
     &:visited {
@@ -30,7 +38,7 @@
     backface-visibility: hidden;
 
     &::before {
-      content: '';
+      content: "";
       display: block;
       height: 100%;
       width: 100%;
